corrected height on mobile devices

--- a/sorting-visualizer/adjustments.css
+++ b/sorting-visualizer/adjustments.css
@@ -1,3 +1,7 @@
+html, body{
+    height: 100%;
+}
+
 img, svg{
     vertical-align: -.125em;
 }
